Remove JM GCs options, add -XX:MaxPermSizehoping it will make Old Gen stop increasing